fix code x overflow

--- a/themes/nojs/static/css/style.css
+++ b/themes/nojs/static/css/style.css
@@ -136,6 +136,7 @@ article ol ol {
 pre {
   padding: 1rem;
   margin: 1rem 0;
+  overflow-x: auto;
 }
 
 code {
